# gen/js/onehub/v1/models_pb.js
@@ -21,6 +21,19 @@ export const User = /*@__PURE__*/ proto3.makeMessageType(
 );
 
 /**
+ * @generated from message onehub.v1.MessageBase
+ */
+export const MessageBase = /*@__PURE__*/ proto3.makeMessageType(
+  "onehub.v1.MessageBase",
+  () => [
+    { no: 1, name: "created_at", kind: "message", T: Timestamp },
+    { no: 2, name: "updated_at", kind: "message", T: Timestamp },
+    { no: 3, name: "id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 4, name: "creator_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+  ],
+);
+
+/**
  * Artists perform/play/sing songs
  *
  * @generated from message onehub.v1.Topic
@@ -28,12 +41,24 @@ export const User = /*@__PURE__*/ proto3.makeMessageType(
 export const Topic = /*@__PURE__*/ proto3.makeMessageType(
   "onehub.v1.Topic",
   () => [
-    { no: 1, name: "created_at", kind: "message", T: Timestamp },
-    { no: 2, name: "updated_at", kind: "message", T: Timestamp },
-    { no: 3, name: "id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 4, name: "creator_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 5, name: "name", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 6, name: "users", kind: "map", K: 9 /* ScalarType.STRING */, V: {kind: "scalar", T: 8 /* ScalarType.BOOL */} },
+    { no: 1, name: "base", kind: "message", T: MessageBase },
+    { no: 2, name: "name", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 3, name: "users", kind: "map", K: 9 /* ScalarType.STRING */, V: {kind: "scalar", T: 8 /* ScalarType.BOOL */} },
+  ],
+);
+
+/**
+ * *
+ * Base message type of entities that have custom "content" in them.
+ *
+ * @generated from message onehub.v1.ContentBase
+ */
+export const ContentBase = /*@__PURE__*/ proto3.makeMessageType(
+  "onehub.v1.ContentBase",
+  () => [
+    { no: 1, name: "content_type", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 2, name: "content_text", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 3, name: "content_data", kind: "message", T: Struct },
   ],
 );
 
@@ -46,14 +71,42 @@ export const Topic = /*@__PURE__*/ proto3.makeMessageType(
 export const Message = /*@__PURE__*/ proto3.makeMessageType(
   "onehub.v1.Message",
   () => [
-    { no: 1, name: "created_at", kind: "message", T: Timestamp },
-    { no: 2, name: "updated_at", kind: "message", T: Timestamp },
-    { no: 3, name: "id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 4, name: "user_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 5, name: "topic_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 6, name: "content_type", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 7, name: "content_text", kind: "scalar", T: 9 /* ScalarType.STRING */ },
-    { no: 8, name: "content_data", kind: "message", T: Struct },
+    { no: 1, name: "base", kind: "message", T: MessageBase },
+    { no: 2, name: "content_base", kind: "message", T: ContentBase },
+    { no: 3, name: "topic_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 4, name: "parent_message_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+  ],
+);
+
+/**
+ * *
+ * Nodes are blocks inside a graph.
+ *
+ * @generated from message onehub.v1.Node
+ */
+export const Node = /*@__PURE__*/ proto3.makeMessageType(
+  "onehub.v1.Node",
+  () => [
+    { no: 1, name: "base", kind: "message", T: MessageBase },
+    { no: 2, name: "content_base", kind: "message", T: ContentBase },
+    { no: 3, name: "topic_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+  ],
+);
+
+/**
+ * *
+ * Edges between two nodes in a graph.
+ *
+ * @generated from message onehub.v1.Edge
+ */
+export const Edge = /*@__PURE__*/ proto3.makeMessageType(
+  "onehub.v1.Edge",
+  () => [
+    { no: 1, name: "base", kind: "message", T: MessageBase },
+    { no: 2, name: "content_base", kind: "message", T: ContentBase },
+    { no: 3, name: "source_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 4, name: "target_id", kind: "scalar", T: 9 /* ScalarType.STRING */ },
+    { no: 5, name: "undirected", kind: "scalar", T: 9 /* ScalarType.STRING */ },
   ],
 );
 
